--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@ body {
   background-color: #fff;
   font-weight: 400;
   min-height: 100vh;
-  width: 100vw;
+  max-width: 100vw;
   overflow-x: hidden;
 }
